--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 [submodule "rnnoise"]
 	path = rnnoise
 	url = https://github.com/VoiceAmongUs/rnnoise
+[submodule "opus"]
+	path = opus
+	url = https://github.com/VoiceAmongUs/opus
