--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     volumes: 
       - ./scripts:/app/scripts:ro
       - ./libsoundio:/app/libsoundio:rw
+      - ./opus:/app/opus:rw
       - ./rnnoise:/app/rnnoise:rw
       - ./build:/app/build:rw
           
